Lots of minor changes to make things validate

--- a/AV/Hashing/HashingDeleteProficiency.html
+++ b/AV/Hashing/HashingDeleteProficiency.html
@@ -13,6 +13,9 @@
       .jsavlabel {
         font-weight: bold;
       }      
+      #procontrols {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -39,7 +42,7 @@
             where the key should be inserted. To delete a key, click on all the indices the hashfunction would consider
             when trying to find the correct position. Use simple mod hashfunction and linear probing for collision resolution.
           </p>
-          <p align="center">
+          <p id="procontrols">
             <span class="jsavscore"></span>
           </p>
         </div>
