--- a/AV/Sorting/SSprofHelp.html
+++ b/AV/Sorting/SSprofHelp.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="content">
 <h1>Shellsort Proficiency Exercise Help Page</h1>
 <p>
 This exercise asks you to reproduce the actions taken by the Shellsort
@@ -73,6 +74,6 @@ button to see a slideshow in a pop-up window.
 <li> The "About" button will tell you about who wrote this, etc.
 <li> The "Help" button got you here.
 </ul>
-
+</div>
 </body>
 </html>
