--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -38,9 +38,8 @@
       </p>
 
       <p>Increments to use:
-        <input type="text" readonly="readonly" name="increments"
-          id="increments" width="50">
-        <span class="jsavscore" />
+        <input type="text" readonly="readonly" name="increments" id="increments">
+        <span class="jsavscore"></span>
       </p>
 
       <p><b>Input:</b></p>
