--- a/AV/Sorting/heapsortProficiency.html
+++ b/AV/Sorting/heapsortProficiency.html
@@ -29,7 +29,7 @@
           <p class="instructions">
             Reproduce the behavior of heapsort for the maximum heap below. You can swap keys by clicking the first one and then the second one in either of the representations (array or binary tree). Begin by swapping the last key with the largest key, and reducing the size of the heap by one (by clicking the "Decrement heap size" button). After that,   restore the heap property again.
           </p>
-          <p align="center">
+          <p id="procontrols">
             <input id="decrement" type="button" value="Decrement heap size" />
             <span class="jsavscore"></span>
           </p>
