--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -39,7 +39,7 @@
       blocks are merged matters so be sure to select the smallest
       blocks first, starting at the left.
     </p>
-    <p><span class="jsavscore" /></p>
+    <p><span class="jsavscore"></span></p>
     <div id="arrays" class="jsavcanvas"></div>
   </form>
 </div> <!-- container -->
