--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -54,7 +54,7 @@
     <p>
       <input type="button" id="partition" name="partition" value="Partition" />
       <input type="button" id="markSorted" name="markSorted" value="Mark Selected as Sorted" />
-      <span class="jsavscore" />
+      <span class="jsavscore"></span>
     </p>
     <p class="jsavoutput jsavline"></p>
     
