--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -51,7 +51,7 @@
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
-    <p class="jsavoutput jsavline" readonly="readonly"></p>
+    <p class="jsavoutput jsavline"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
 
