--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -54,7 +54,7 @@
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols" style="margin-top: -15px;"></div>
-    <p class="jsavoutput jsavline" readonly="readonly"></p>
+    <p class="jsavoutput jsavline"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
 
