Added alt attribute to proficiency checkmark and warning icon, changed tab order on login popup box

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -22,19 +22,19 @@
     <fieldset class="textbox">
       <label class="username">
         <span>Username or email</span>
-        <input id="username" value="" type="text" autocomplete="on" placeholder="Username">
+        <input id="username" value="" type="text" autocomplete="on" placeholder="Username" tabindex="1">
       </label>
       <label class="password">
         <span>Password</span>
-        <input id="password" value="" type="password" placeholder="Password">
+        <input id="password" value="" type="password" placeholder="Password" tabindex="2">
         <span><a class="forgot" href="#">Forgot your password?</a></span>
       </label>
       
       <p>
-        <input type="submit" id="login-submit-button" value="Sign in" />
+        <input type="submit" id="login-submit-button" value="Sign in" tabindex="3" />
       </p>
       <p>
-        <input type="button" id="register-button" value="Register" />
+        <input type="button" id="register-button" value="Register" tabindex="4" />
       </p>
       
       <!--
