Moved 'showbutton' option from the RST files to the config file, added additional directories to conf.py for AV and Exercises

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -36,14 +36,6 @@
       <p>
         <input type="button" id="register-button" value="Register" tabindex="4" />
       </p>
-      
-      <!--
-      <button id="login-submit-button" class="submit-button" type="button">Sign in</button>
-      
-      <p>
-        <a class="signup" href="#">Sign Up</a>
-      </p>
-      -->
     </fieldset>
   </form>
 </div>
@@ -53,7 +45,7 @@
 <a id="registration-link" style="float:right;color:red;margin:10px 10px auto" class="registration-link" href="#">Register</a>
 <div id="registration-box" class="registration-popup ">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
-  <form method="post" class="signin" action="">
+  <form method="post" class="signin" action="#">
     <fieldset class="textbox">
       <div id="register_error" class="error"></div>
       <label class="username">
