Added an ID to 'Forgot Your Password' link so the click handler will reference it properly, fixed validation issues

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -27,7 +27,7 @@
       <label class="password">
         <span>Password</span>
         <input id="password" value="" type="password" placeholder="Password" tabindex="2">
-        <span><a class="forgot" href="#">Forgot your password?</a></span>
+        <span><a id="forgot" href="#">Forgot your password?</a></span>
       </label>
       
       <p>
