Tweak for change in policy page to HTML

--- a/lib/Privacy.html
+++ b/lib/Privacy.html
@@ -46,7 +46,7 @@ from a source that you trust.
 <h2>Information is Automatically Logged</h2>
 
 <p>
-OpenDSA sites routinely logs all accesses made by all users.
+OpenDSA sites routinely log all accesses made by all users.
 We use these data primarily for two reasons.
 (1) To help us improve the OpenDSA instructional materials.
 (2) As part of our research mission, we
