Update to JSAV 0.6.0-75. Fixed bugs in Quicksort code and presentation. Improved layout and messaging for Proficiency exercise model answers.

--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -38,8 +38,8 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input id="arrayValues" size="55" name="arrayValues" type="text" 
-         placeholder="Type space-separated values, or just hit 'run' to use random values" />
+      <input id="arrayValues" size="60" name="arrayValues" type="text" 
+         placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
   <div class="avcontainer">
