--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -44,11 +44,11 @@
       a "Model Answer" to see how it is supposed to be done.
       <br /><br />
 
-      Always select the left and right endpoints, even if it is the
-      same element.  When processing a sublist of length 1, simply
-      mark the element as sorted.  When determining the final location
-      for the pivot, treat any elements that match the pivot as if
-      they were larger than the pivot.
+      When partitioning, always select the left and right endpoints,
+      even if they are the same element.  When processing a sublist of
+      length 1, simply mark the element as sorted.  When determining
+      the pivot's final location, treat any elements that match the
+      pivot as if they were larger than the pivot.
     </p>
     
     <p>
