--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -34,7 +34,7 @@
     <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
       <input size="60" name="arrayValues" id="arrayValues" type="text"
-          placeholder="Space-separated values to use (optional)" />
+         placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
   <div class="avcontainer">
