--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -38,8 +38,8 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="55" name="arrayValues" id="arrayValues" type="text" 
-         placeholder="Type space-separated values, or just hit 'run' to use random values" />
+      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+         placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
   <div class="avcontainer">
