--- a/AV/Development/graphDFS.html
+++ b/AV/Development/graphDFS.html
@@ -4,7 +4,7 @@
   <title>Graph Depth First Search</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="graphDFS.css" type="text/css" />
 </head>
 
