Fix some bugs in hashing AVs, made sure all hashing KA questions have a hint (often just a dummy)

--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <style>
     #container {
-      width: 860px;
-      height: 600px;
+      width: 800px;
+      height: 580px;
     }
 .jsavline {
   height: 50px;
@@ -47,8 +47,8 @@
     </select>
     <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="55" name="arrayValues" id="arrayValues" type="text" 
-         placeholder="Type space-separated values, or click 'run' to use random values" />
+      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+         placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
   <div class="avcontainer">
