--- a/Exercises/Hashing/HashDelMCQ1.html
+++ b/Exercises/Hashing/HashDelMCQ1.html
@@ -22,6 +22,9 @@
 	  <li><var> "It has no affect on the average time to insert and search"</var></li>
 	  <li><var> "It causes a slight decrease in the average time to insert and search" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
