--- a/Exercises/Hashing/HashDelTF3.html
+++ b/Exercises/Hashing/HashDelTF3.html
@@ -15,7 +15,7 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-	<p class="problem">Answer TRUE or FALSE.
+	<p class="problem">Answer TRUE or FALSE.</p>
         <p class="question">
 	  When deleting a record from a
 	  hash table, we can just do a normal search and then remove the
@@ -25,6 +25,9 @@
 	  <li><var> "True"</var></li>
 	  <li><var> "False" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
