--- a/Exercises/Hashing/HashFuncTFdisk.html
+++ b/Exercises/Hashing/HashFuncTFdisk.html
@@ -28,6 +28,9 @@
 	  <li><var> "True"</var></li>
 	  <li><var> "False" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
