--- a/Exercises/Hashing/HashMCQavg.html
+++ b/Exercises/Hashing/HashMCQavg.html
@@ -24,6 +24,9 @@
 	  <li><var><code>O(n)</code></var></li>
 	  <li><var><code>O(\log n)</code></var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
