--- a/Exercises/Hashing/HashMCQclosed.html
+++ b/Exercises/Hashing/HashMCQclosed.html
@@ -21,6 +21,9 @@
 	  <li><var>"All records are stored directly within the hash table"</var></li>
           <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>
   </div>
