--- a/Exercises/Hashing/HashMCQcollision.html
+++ b/Exercises/Hashing/HashMCQcollision.html
@@ -22,8 +22,11 @@
 	  <li><var> "Two records are identical except for their keys"</var></li>
 	  <li><var> "Two records have the same key" </var></li>
 	  <li><var> "Two records have the same key and the same hash value" </var></li>
-	  <li><var> "Two records with the same key have different hash values"</var></li>	  	 
+	  <li><var> "Two records with the same key have different hash values"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
