--- a/Exercises/Hashing/HashMCQhashdef.html
+++ b/Exercises/Hashing/HashMCQhashdef.html
@@ -24,6 +24,9 @@
 	  <li><var> "Return the hash value for the key" </var></li>
 	  <li><var> "Return values in equal distribution throughout the table" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
