--- a/Exercises/Hashing/HashMCQlinprob.html
+++ b/Exercises/Hashing/HashMCQlinprob.html
@@ -22,6 +22,9 @@
 	  <li><var>"You tend to get primary clustering if the hashing function is not uniform "</var></li>
 	  <li><var>"The algorithm is difficult to program"</var></li>			  	  	 
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>
   </div>
