--- a/Exercises/Hashing/HashMCQopen.html
+++ b/Exercises/Hashing/HashMCQopen.html
@@ -22,6 +22,9 @@
 	  <li><var>"The algorithm running time is determined by probes of different table cells until an empty one is found"</var></li>
         <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>
   </div>
