--- a/Exercises/Hashing/HashMCQopenfull.html
+++ b/Exercises/Hashing/HashMCQopenfull.html
@@ -30,6 +30,9 @@
 	  <li><var>"There is no maximum"</var></li>
 	  <li><var>"None of the above"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	  
   </div>
