--- a/Exercises/Hashing/HashMCQprobe.html
+++ b/Exercises/Hashing/HashMCQprobe.html
@@ -23,6 +23,9 @@
 	  <li><var> "The order in which the hash function will visit the slots of the hash table" </var></li>
 	  <li><var> "It is another name for collision resolution" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
