--- a/Exercises/Hashing/HashMCQquery.html
+++ b/Exercises/Hashing/HashMCQquery.html
@@ -24,6 +24,9 @@
 	  <li><var>"All of these"</var></li>			  	  	 
 	  <li><var>"None of these"</var></li>			  	  	 
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>
   </div>
