--- a/Exercises/Hashing/HashingDoubleProbePRO.html
+++ b/Exercises/Hashing/HashingDoubleProbePRO.html
@@ -183,6 +183,9 @@ var getH2 = function(K) {
           else return checkAnswer();
         </div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
