--- a/Exercises/Sorting/ShellsortSumm.html
+++ b/Exercises/Sorting/ShellsortSumm.html
@@ -20,5 +20,7 @@
   <div class="exercise" data-name="ShellsortMCQ4" ></div>  
   <div class="exercise" data-name="ShellsortMCQ5" ></div>  
   <div class="exercise" data-name="ShellsortMCQ6" ></div>
+  <div class="exercise" data-name="ShellsortMCQskip" ></div>
+  <div class="exercise" data-name="ShellsortTFincr" ></div>
 </body>
 </html>
