--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -41,8 +41,8 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="55" name="arrayValues" id="arrayValues" type="text" 
-         placeholder="Type space-separated values, or click 'run' to use random values" />
+      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+         placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
   <div class="avcontainer">
