--- a/Exercises/Hashing/HashDelMCQ2.html
+++ b/Exercises/Hashing/HashDelMCQ2.html
@@ -24,6 +24,9 @@
 	  <li><var> "Sentinal" </var></li>
 	  <li><var> "Gravestone" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
