--- a/Exercises/Hashing/HashDelTF4.html
+++ b/Exercises/Hashing/HashDelTF4.html
@@ -15,7 +15,7 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-	<p class="problem">Answer TRUE or FALSE.
+	<p class="problem">Answer TRUE or FALSE.</p>
         <p class="question">
 	  A problem with using tombstones
 	  is that they take up slots in the table that cannot be reused, so
@@ -25,6 +25,9 @@
 	  <li><var> "True"</var></li>
 	  <li><var> "False" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
