--- a/Exercises/Hashing/HashFuncMCQ3.html
+++ b/Exercises/Hashing/HashFuncMCQ3.html
@@ -22,6 +22,9 @@
 	  <li><var> "The middle digits or bits of the key" </var></li>
 	  <li><var> "The low order digits or bits in the key" </var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
