--- a/Exercises/Hashing/HashFuncMCQ4.html
+++ b/Exercises/Hashing/HashFuncMCQ4.html
@@ -26,7 +26,11 @@
 	<li><var>"No"</var></li>
 	<li><var>"Usually"</var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
