--- a/Exercises/Hashing/HashFuncTF6.html
+++ b/Exercises/Hashing/HashFuncTF6.html
@@ -16,7 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <div class="spin">
-	<p class="problem">Answer TRUE or FALSE.
+	<p class="problem">Answer TRUE or FALSE.</p>
         <p class="question">For the string hash functions, the size of
           the hash table limits the length of the string that can be
           hashed.</p>
@@ -26,7 +26,11 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
