--- a/Exercises/Hashing/HashFuncTF7.html
+++ b/Exercises/Hashing/HashFuncTF7.html
@@ -15,7 +15,7 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-	<p class="problem">Answer TRUE or FALSE.
+	<p class="problem">Answer TRUE or FALSE.</p>
 	<p class="question">Open hashing has the advantage that it
 	can answer range queries or questions like what is the largest
 	key in the database.</p>
@@ -24,6 +24,9 @@
           <li><var>"True"</var></li>
           <li><var>"False"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>	 
   </div>
