--- a/Exercises/Hashing/HashMCQquadprobe.html
+++ b/Exercises/Hashing/HashMCQquadprobe.html
@@ -22,6 +22,9 @@
 	  <li><var>"Memory usage increases with each insertion"</var></li>
 	  <li><var>"Primary clustering can degrade performance"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 	  	  
     </div>
   </div>
