--- a/Exercises/Hashing/HashMCQtablesize.html
+++ b/Exercises/Hashing/HashMCQtablesize.html
@@ -22,6 +22,9 @@
 	  <li><var>"Yes, it works fine since the table size does not matter to the hash function"</var></li>			  	  	 
 	  <li><var>"No, the hash function would now generate illegal values"</var></li>
 	</ul>
+	<div class="hints">
+          <p>Sorry, no hints are available.</p>
+	</div>
       </div> 
     </div>  
   </div>
