--- a/Exercises/Hashing/HashingBucket2PRO.html
+++ b/Exercises/Hashing/HashingBucket2PRO.html
@@ -203,6 +203,9 @@ function checkAnswer() {
           else return checkAnswer(arr_size);
 	</div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
