--- a/Exercises/Hashing/HashingLinearProbePRO.html
+++ b/Exercises/Hashing/HashingLinearProbePRO.html
@@ -115,6 +115,9 @@ var checkAnswer = function() {
           else return checkAnswer();
         </div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
