--- a/Exercises/Hashing/HashingPseudoRandomProbePRO.html
+++ b/Exercises/Hashing/HashingPseudoRandomProbePRO.html
@@ -140,6 +140,9 @@ var checkAnswer = function() {
           else return checkAnswer();
         </div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
