--- a/Exercises/Hashing/HashingQuadraticProbePRO.html
+++ b/Exercises/Hashing/HashingQuadraticProbePRO.html
@@ -120,6 +120,9 @@ var checkAnswer = function() {
           else return checkAnswer();
         </div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
