--- a/Exercises/Hashing/OpenHashPRO.html
+++ b/Exercises/Hashing/OpenHashPRO.html
@@ -186,6 +186,9 @@ console.log("curr is " + curr + ", arr_size is " + arr_size);
 	  </div>
 	</div>
       </div>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
